--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
 />
+<link rel="preload" as="image" href="/images/bg-login.jpg">
 
 
     <link
